--- a/docker/php/dockerfile
+++ b/docker/php/dockerfile
@@ -5,16 +5,6 @@ RUN apk --no-cache --repository https://dl-cdn.alpinelinux.org/alpine/edge/testi
     php81 \
     php81-pgsql \
     php81-pdo_pgsql \
-    php81-dev \
-    php81-gd \
-    php81-curl \
-    php81-intl \
-    php81-mbstring \
-    php81-pcntl \
-    php81-phar \
-    php81-xml \
-    php81-xsl \
-    php81-dom \
     php81-fpm \
     php81-pecl-apcu && \
     ln -sf /usr/bin/php81 /usr/bin/php && \
@@ -35,5 +25,5 @@ USER www-data
 
 WORKDIR /var/www
 
-# Start php fpm --nodaemonize  Force to stay in foreground and ignore daemonize option from configuration file. https://linux.die.net/man/8/php-fpm
+# Start php fpm (--nodaemonize Force to stay in foreground and ignore daemonize option from configuration file. https://linux.die.net/man/8/php-fpm)
 CMD ["php-fpm81", "--nodaemonize"]
