--- a/docker/php/dockerfile
+++ b/docker/php/dockerfile
@@ -1,7 +1,8 @@
 FROM alpine:3.17.3
 
 # Install php with it's basic requirements
-RUN apk --no-cache --repository https://dl-cdn.alpinelinux.org/alpine/edge/testing add \
+# no-cache sert à garder de petits containers en ne gardant pas le cache en local https://stackoverflow.com/questions/49118579/alpine-dockerfile-advantages-of-no-cache-vs-rm-var-cache-apk
+RUN apk --no-cache add \
     php81 \
     php81-pgsql \
     php81-pdo_pgsql \
