--- a/docker/php/dockerfile
+++ b/docker/php/dockerfile
@@ -10,6 +10,7 @@ RUN apk --no-cache add \
     php81-pecl-apcu && \
     ln -sf /usr/bin/php81 /usr/bin/php && \
     rm -rf /var/cache/apk/*
+# ln -sf /usr/bin/php81 /usr/bin/php . Permet de s'assurer que l'on utilise bien les commande 'php' utiliseront php 8.1
 
 # Create a specific user instead of using root https://askubuntu.com/questions/873839/what-is-the-www-data-user
 RUN adduser -u 82 -D -S -G www-data www-data
