--- a/docker-compose.back.yml
+++ b/docker-compose.back.yml
@@ -1,28 +1,5 @@
 version: '3.18'
 services:
-  nginx:
-    image: nginx:alpine
-    volumes: 
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./docker/php:/var/www/html
-    ports: 
-      - 8080:80
-    networks:
-      - back-end
-
-  php:
-    image: cdebray1410/3iwj-docker-project_php
-    volumes:
-      - ./docker/php:/var/www/html
-    networks:
-      - back-end
-
-  composer:
-    image: fdev4docker/3iwj-docker-project-composer-1
-    volumes:
-      - ./www:/var/www/html/
-    command: composer --version
-
   adminer:
     image: cdebray1410/3iwj-docker-project_adminer
     volumes:
@@ -54,3 +31,5 @@ volumes:
 networks:
   back-end:
     name: back-end
+  front-end:
+    name: front-end
